crates/ty_python_semantic/resources/mdtest/snapshots/basic.md_-_Structures_-_`from`_import_that_h…_(3caffc60d8390adf).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: basic.md - Structures - `from` import that has a typo
mdtest path: crates/ty_python_semantic/resources/mdtest/import/basic.md
---

# Python source files

## foo.py

```
1 | from collections import dequee  # error: [unresolved-import]
```

## bar.py

```
1 | from baz import foo  # error: [unresolved-import]
```

## baz.py

```
1 | _foo = 42
```

## eggs.py

```
1 | from baz import _fooo  # error: [unresolved-import]
```

# Diagnostics

```
error[unresolved-import]: Module `collections` has no member `dequee`
 --> src/foo.py:1:25
  |
1 | from collections import dequee  # error: [unresolved-import]
  |                         ^^^^^^ Did you mean `deque`?
  |
info: rule `unresolved-import` is enabled by default

```

```
error[unresolved-import]: Module `baz` has no member `foo`
 --> src/bar.py:1:17
  |
1 | from baz import foo  # error: [unresolved-import]
  |                 ^^^
  |
info: rule `unresolved-import` is enabled by default

```

```
error[unresolved-import]: Module `baz` has no member `_fooo`
 --> src/eggs.py:1:17
  |
1 | from baz import _fooo  # error: [unresolved-import]
  |                 ^^^^^ Did you mean `_foo`?
  |
info: rule `unresolved-import` is enabled by default

```
